<resources>
    <string name="app_name">mPurse</string>
    <string name="action_settings">Settings</string>


    <string name="enable_p2p_button">P2P On/Off</string>
    <string name="discover_peers_button">Discover</string>
    <string name="connect_peer_button">Connect</string>
    <string name="disconnect_peer_button">Disconnect</string>
    <string name="get_file_button">Launch Gallery</string>
    <string name="empty"></string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="client_text">This device will act as a client. Click on Gallery button to pick a local(stored) file</string>
    <string name="empty_message">No devices found. Turn on P2P and perform discovery from the Action Bar</string>
    <string name="p2p_off_warning">Enable P2P from action bar button above or system settings</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="label_me">ME</string>
    <string name="label_peers">PEERS</string>
    <string name="login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="register">Register</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_wifi">WiFi</string>
    <string name="about_us">About Us</string>
    <string name="home">Home</string>
    <string name="transactions">Transactions</string>
    <string name="settings">Settings</string>

    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">close drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transaction_menu">Transactions</string>
    <string name="add">Add</string>
    <string name="request">Request</string>
    <string name="send">Send</string>
    <string name="title_activity_requests">Incoming Requests</string>
</resources>
