<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_home"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
    </group>


    <item android:title="@string/transaction_menu">
        <menu>
            <item
                android:id="@+id/send_transactions"
                android:icon="@drawable/ic_profile"
                android:title="@string/send" />
            <item
                android:id="@+id/request_transactions"
                android:icon="@drawable/ic_profile"
                android:title="@string/request" />
            <item
                android:id="@+id/add_transactions"
                android:icon="@drawable/ic_profile"
                android:title="@string/add" />
        </menu>
    </item>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />

    </group>
</menu>